<resources>
    <string name="app_name">potea</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="potea">Potea</string>
    <string name="version">Version</string>
    <string name="checkYourNetwork">Check your internet</string>
    <string name="please_turn">PLEASE TURN ON</string>
    <string name="wifi">Wifi</string>
    <string name="mobile_data">Mobile data</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="no_internet_desc">You are not connection to the internet </string>
    <string name="loginToApp">Login to app</string>
    <string name="enterYourEmail">Please enter your email address</string>
    <string name="emailAddress">Email address</string>
    <string name="sendEmail">Send email</string>
    <string name="sendVerifyCode">Send verification code</string>
    <string name="loginCode">login code</string>
    <string name="enterVerifyCode">Please enter the Otp code</string>
    <string name="_0_0_0_0">0000</string>
    <string name="second">S</string>
    <string name="verifyCode">Code texted</string>
    <string name="sendAgainVerifyCode">Resend</string>
    <string name="emailNotValid">Please enter a valid email address</string>
    <string name="activeEmail">The activation code has been sent to the email below</string>
    <string name="email_not_empty">The email field cannot be empty</string>
    <string name="deniedPermission">These permissions are denied :</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="login_account">Already have an account? Login</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="otp_send">Enter the Otp send to : </string>
    <string name="not_match_code">The code entered is incorrect. Please try again.</string>
    <string name="amazing_offers">Amazing \n offers</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="amazing_end">The discount is over</string>
    <string name="new_products">New Product</string>
    <string name="showAll">Show All</string>
    <string name="popular">Popular</string>
    <string name="colors">Colors</string>
    <string name="showMore">ShowMore</string>
    <string name="addToCart">Add to cart</string>
    <string name="comments">Comments</string>
    <string name="features">Features</string>
    <string name="price_Chart">Price Chart</string>
    <string name="notFound">No item found</string>
    <string name="notFound_comment">There are no comments for this product</string>
    <string name="addNewComment">Add new comment</string>
    <string name="your_Comment">Your comment</string>
    <string name="write_your_title_comment">Write your title comment</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit_new_comment">Submit New Comment</string>
    <string name="existsInCart">Available in cart</string>
    <string name="delivery_amount">Delivery Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty!!</string>
    <string name="continuePayment">Continue the purchase process</string>
    <string name="make_payment">Make Payment</string>
    <string name="favorite">Favorite</string>
    <string name="empty_cart">Your shopping cart is empty</string>
    <string name="empty_profile">Name and surname cannot be empty. Please complete your profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="security">Security</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="notification">Notification</string>
    <string name="Feed_back">Feedback</string>
    <string name="editProfile">Edit Profile</string>
    <string name="submitProfileInfo">Edit Profile Info</string>
    <string name="name">Name</string>
    <string name="family">Family</string>
    <string name="idNumber">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="emil">Emil</string>
    <string name="phone_number">Phone Number</string>
    <string name="gallery_Images">Gallery Images</string>
    <string name="recipientInfo">Recipient info</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="postalCode">Postal code</string>
    <string name="phone">Phone</string>
    <string name="editAddress">Edit Address</string>
    <string name="submitData">Submit Information</string>
    <string name="success_address">Your address has been registered</string>
    <string name="give_us_feedback">Give us Feedback</string>
    <string name="tell_us_more">tell us more…</string>
    <string name="des_rate">If You are enjoy using our app.would you mind rating us one the App Store.\n</string>
    <string name="may_be_later">May Be, later</string>
    <string name="rate_now">Rate Now</string>
    <string name="send">Send</string>
    <string name="theme_setting">Theme settings</string>
    <string name="empty_favorite">Your Favorites List is Empty</string>
    <string name="add_address">Add Address</string>
    <string name="addresses">Addresses</string>
    <string name="empty_address">Address: No address provided</string>
    <string name="default_address">Default</string>
    <string name="searchbar_hint">Search</string>
    <string name="default_search">Enter the product name</string>
    <string name="not_found_search">Item not found</string>
    <string name="filterRate">Score</string>
    <string name="max_price">Max Price</string>
    <string name="min_price">Min Price</string>
    <string name="filter_search">search by :</string>
    <string name="create_an_account">Create an account</string>
    <string name="or_register_with_your_email">or register with your email :</string>
    <string name="otea">Otea</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string-array name="theme_settings">
        <item>Enable Night Mode</item>
        <item>Disable Night Mode</item>
        <item>Follow System Theme</item>
    </string-array>
    <string-array name="filter_search">
        <item>Max Price</item>
        <item>Low Price</item>
        <item>Rate</item>
    </string-array>
</resources>