<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_4mdp">
    <!--edit profile-->
    <TextView
        android:id="@+id/txt_edit_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/edit_profile"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/ic_edit_profile"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--address-->
    <TextView
        android:id="@+id/txt_add_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/address"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_edit_profile" />
    <!--notification-->
    <TextView
        android:id="@+id/txt_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/notification"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/notification"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_add_address" />
    <!--payment-->
    <TextView
        android:id="@+id/txt_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/payment"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/ic_payment"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_notification" />
    <!--security-->
    <TextView
        android:id="@+id/txt_security"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/security"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/ic_security"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_payment" />
    <!--dark mode-->
    <TextView
        android:id="@+id/txt_dark_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/dark_mode"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/ic_dark_mode"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_security" />
    <!--feed back-->
    <TextView
        android:id="@+id/txt_feed_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/Feed_back"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/ic_feedback"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_dark_mode" />
    <!--privacy policy-->
    <TextView
        android:id="@+id/txt_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/privacy_policy"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/ic_privacy_policy"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_feed_back" />
    <!--help center-->
    <TextView
        android:id="@+id/txt_help_center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/help_center"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/ic_help_center"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_privacy" />
    <!--invite friends-->
    <TextView
        android:id="@+id/txt_invite_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/invite_friends"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/gray_900"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/ic_invite_friends"
        app:drawableTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_help_center" />
    <!--logout-->
    <TextView
        android:id="@+id/txt_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12mdp"
        android:layout_marginTop="@dimen/_4mdp"
        android:layout_marginEnd="@dimen/_12mdp"
        android:drawablePadding="@dimen/_12mdp"
        android:gravity="start|center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_6mdp"
        android:text="@string/logout"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/red_400"
        app:drawableStartCompat="@drawable/ic_logout"
        app:drawableTint="@color/red_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_invite_friends" />

</androidx.constraintlayout.widget.ConstraintLayout>